# piper

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
conf/: logging.yaml  metrics_catalog.yml  settings.toml
docs/: architecture.md  runbook.md
examples/: config.toml  piper.toml  show.bobo.piper.toml
grafana/provisioning/dashboards/: data_quality.json  farm_pressure.json  provider.yaml  publish_health.json  render_health.json  storage_growth.json  tool_reliability.json
grafana/provisioning/datasources/: duckdb.yaml
scripts/: rm_wedge_report.py  run_backfill.sh  run_ingest.sh  run_materialize.sh  setup_grafana_plugin.sh
src/piper/: __init__.py  __main__.py  catalog.py  cli.py  config.py  discovery.py  doctor.py  errors.py  ingest.py  lock.py  logging.py  manifest.py  models.py  parquet.py  parser.py  paths.py  quarantine.py  sql_runner.py  validate.py  warehouse.py
src/piper/commands/: __init__.py  base.py  doctor.py  goto.py  init.py  path.py  run.py
src/piper/models/: __init__.py  envelope.py  row.py
src/piper/resolvers/: __init__.py  paths.py  scripts.py
src/piper/sql/gold/: gold_data_quality_daily.sql  gold_farm_pressure_daily.sql  gold_publish_health_daily.sql  gold_render_health_daily.sql  gold_storage_growth_weekly.sql  gold_tool_reliability_daily.sql
src/piper/sql/schema/: 001_init.sql
src/piper/sql/silver/: silver_publish_usd.sql  silver_render_stats_summary.sql  silver_storage_scan_bucket.sql  silver_storage_scan_summary.sql  silver_tool_events.sql  silver_tractor_farm_snapshot.sql  silver_tractor_job_spool.sql
src/piper/tools/: __init__.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_cli_commands.py  test_config.py  test_discovery.py  test_doctor.py  test_fixtures.py  test_gold_models.py  test_ingest.py  test_lock.py  test_logging.py  test_manifest.py  test_parquet.py  test_parser.py  test_path_resolver.py  test_paths.py  test_quarantine.py  test_rm_wedge_images.py  test_rm_wedge_tool.py  test_sanity.py  test_script_resolver.py  test_silver_domain.py  test_validate.py  test_warehouse.py
tests/fixtures/: farm.jsonl  publish.jsonl  render.jsonl  storage.jsonl  tool.jsonl
tests/integration/: test_ingest_end_to_end.py  test_materialize.py
(+8 files in other folders)
